# SPAR

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/: architecture.md  eval-protocol.md  mission-design.md  rl-pipeline.md  ros2-and-ardupilot.md  ros2-integration.md
docs/future/: high-level-behaviors.md  radio_icd.md
python/: CMakeLists.txt  eval_harness.py  export_onnx.py  parse_session_log.py  spar_bindings.cpp  spar_env.py  train_sac.py
shared/: CMakeLists.txt
shared/assembler/: ObservationAssembler.h
shared/contracts/: BTNode.h  CommandStream.h  ControllerAdapter.h  ControllerEnvelope.h  GeoDatum.h  GoalContext.h  MonitorDecision.h  NavigationObs.h  SimulatorBackend.h  WorldState.h
spar_rover/: CMakeLists.txt  main.cpp
spar_rover/adapter/: ArdupilotAdapter.cpp  ArdupilotAdapter.h  ControllerAdapter.h  Ros2Adapter.cpp  Ros2Adapter.h
spar_rover/mission/: BehaviorTree.cpp  BehaviorTree.h  ExploitNode.cpp  ExploitNode.h  NavigateNode.cpp  NavigateNode.h  NodeRegistry.h  OnnxNavigateNode.cpp  OnnxNavigateNode.h
spar_rover/monitor/: RuntimeMonitor.cpp  RuntimeMonitor.h
spar_rover/sim/: DegradationScenarios.h  KinematicBackend.cpp  KinematicBackend.h  TransportDegradation.h
